# gpx-interpolate

./: Cargo.toml  README.md  todo
.github/workflows/: rust_build.yml
map_matching/: Cargo.toml
map_matching/src/adapters/: mod.rs  overpass_query_adapter.rs
map_matching/src/domain/: closest_point.rs  mod.rs
smooth_gpx/: Cargo.toml
smooth_gpx/src/: lib.rs
smooth_gpx/src/adapters/: gpx_filepath_adapter.rs  mod.rs
smooth_gpx/src/application/: mod.rs  smooth_gpx_track.rs
smooth_gpx/src/domain/: gpx_track.rs
smooth_gpx/src/domain/mappers/: gpx_mappers.rs
smooth_gpx/src/ports/: gpx_filepath_port.rs
src/: main.rs
src/application/cli/: mod.rs
src/modules/gpx/adapters/: gpx_filepath_adapter.rs
src/modules/gpx/application/: smooth_gpx_track.rs
src/modules/gpx/domain/: gpx_track.rs  mod.rs
src/modules/gpx/domain/mappers/: gpx_mappers.rs  mod.rs
src/modules/gpx/ports/: gpx_filepath_port.rs  mod.rs
tests/: test.gpx
