[package]
name = "gpx-exif-tagger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
quick-xml = { version = "0.31.0", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tempdir = "0.3.7"
